# asyncapi-payload-validator

./: .asyncapi-tool  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENCE.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS  release-drafter.yml
.github/actions/jfrog-xray-scan/: action.yml
.github/workflows/: _draft_release.yaml  pypi-publish.yml  validator-tests.yml
asyncapi_payload_validator/: __init__.py  cli.py  validator.py
asyncapi_payload_validator/templates/: validation_report.j2
docs/: advanced.md  ci-cd.md  examples.md  python-api.md
tests/: test_asyncapi_3.py  test_cli.py  test_jinja2_rendering.py  test_main_function.py  test_package.py  test_validate_payload_function.py  test_validator.py  test_validator_edge_cases.py
tests/test-files/: asyncapi-2.6-spec.yaml  asyncapi-3.0-spec.yaml  asyncapi-event-spec.yaml  jinja2-context.json  payload-asyncapi-3.0-invalid.json  payload-asyncapi-3.0-valid.json  payload-enum-violations.json  payload-extra-and-missing.json  payload-jinja2-template-missing-required.j2  payload-jinja2-template.j2  payload-length-violations.json  payload-numeric-violations.json  payload-pattern-violations.json  payload-required-missing.json  payload-strict-extra.json  payload-strict-valid.json  payload-type-mismatches.json  payload-valid-v1.json  payload-valid-v2.json
